--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,13 @@
     --accent-clr: #5e63ff;
     --secondary-txt-clr: #b0b3c1;
     --fc-today-bg-color: rgba(0, 255, 234, 0.146) !important;
+    --spacing1: 4px;
+    --spacing2: 8px;
+    --spacing3: 16px;
+    --spacing4: 20px;
+    --spacing5: 40px;
+    --spacing6: 80px;
+    --spacing7: 160px;
 }
 
 
