--- a/src/css/index.css
+++ b/src/css/index.css
@@ -270,7 +270,9 @@ li img{
 .section-calendar{
     grid-area: main;
     display: grid;
+    /* grid-template-columns: 200px repeat(auto-fit,(1200, 1fr)); */
     grid-template-columns: 200px 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas: 
     "left-side right-side"
 }
@@ -671,10 +673,44 @@ dialog img {
 /* Charts */
 /* Charts */
 
-.section-charts{
-    display: grid;
-}
+
 
 .invisible{
     display: none;
 }
+
+.section-charts{
+    height: 90vh;
+    width: 100%;
+}
+
+.charts-container{
+    margin: auto 0;
+    height: 100%;
+    display: grid;
+    grid-template-rows:  repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+.chart-wrapper {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden; */
+}
+
+
+canvas {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    /* object-fit: contain;  */
+}
+
+
+
+/* .chart-wrapper canvas{
+    height: 300px;
+} */
