--- a/src/css/index.css
+++ b/src/css/index.css
@@ -680,24 +680,31 @@ dialog img {
 }
 
 .section-charts{
-    height: 90vh;
+    /* height: 91vh; */
+    height: calc(100vh - 80px);
     width: 100%;
 }
 
 .charts-container{
-    margin: auto 0;
     height: 100%;
     display: grid;
     grid-template-rows:  repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
+    /* gap: 30px; */
+    background-color:#11121a;
+    justify-items: center;
+    align-items: center;
 }
 .chart-wrapper {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
+    overflow: hidden;
+    margin: 20px;
+    background-color: #202231 ;
+    border-radius: 2px;
 }
 
 
@@ -706,7 +713,8 @@ canvas {
     max-height: 100%;
     width: 100%;
     height: 100%;
-    /* object-fit: contain;  */
+    object-fit: contain; 
+    padding: 20px;
 }
 
 
