--- a/src/css/index.css
+++ b/src/css/index.css
@@ -74,7 +74,7 @@ nav{
 }
 
 .quote{
-    font-size: 1em;
+    font-size: 1.5em;
     position: relative;
 
 }
@@ -281,6 +281,54 @@ li img{
 /* Left main - Tasks */
 /* Left main - Tasks */
 
+/* new task button */
+/* new task button */
+/* new task button */
+
+.open-form {
+    background: #fff;
+    border: none;
+    padding: 10px 20px;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 600;
+    width: 120px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transform: skew(-21deg);
+    margin-left: 36px;
+    margin-top: 4px;
+  }
+  
+  .open-form span {
+    display: inline-block;
+    transform: skew(21deg);
+  }
+  
+  .open-form::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 100%;
+    left: 0;
+    background: rgb(20, 20, 20);
+    opacity: 0;
+    z-index: -1;
+    transition: all 0.2s;
+  }
+  
+  .open-form:hover {
+    color: #fff;
+  }
+  
+  .open-form:hover::before {
+    left: 0;
+    right: 0;
+    opacity: 1;
+  }
+
+
 .left-main{
     grid-area: left-side;
     border: 1px solid var(--line-clr);
@@ -365,6 +413,13 @@ li img{
 /* Right main - Tasks */
 /* Right main - Tasks */
 /* Right main - Tasks */
+
+/* Scrollbar*/
+
+.fc-scrollgrid-section .fc-scroller::-webkit-scrollbar{
+    /* display: none; */
+}
+
 
 
 .right-main{
@@ -510,7 +565,7 @@ dialog {
     z-index: 10;
     border: solid 1px rgb(188, 188, 255);
     width: 440px;
-    height: 400px;
+    height: 320px;
     background-color: #efefef;
     border-radius: 4px;
 }
@@ -521,9 +576,9 @@ dialog img {
 }
 
 
-/* dialog::backdrop {
-    background-color: rgba(126, 126, 126, 0.3);
-} */
+dialog::backdrop {
+    background-color: rgba(126, 126, 126, 0.1);
+}
 
 
 .close-header-form{
@@ -613,7 +668,7 @@ dialog img {
     gap: 0.8em;
 }
 
-.form-description,.form-time,.form-category,.form-color{
+.form-description,.form-time,.form-category,.form-color,.form-check{
     display: flex;
     gap: 1em;
 }
@@ -638,25 +693,96 @@ dialog img {
     background-color: rgb(198, 198, 198);
 }
 
-.btn {
-    border: none;
-    padding: 6px;
-    border-radius: 6px;
+#check-event{
+    display: none;
 }
 
-.create-task{
-    background-color: aqua;
+label{
     cursor: pointer;
-    transition: 0.15 ease;
+}
+
+.form-check .checkbox-label{
+    font-size: 13px;
+}
+
+
+.change-form{
+    position: absolute;
+    bottom: 10px;
+    right: 16px;
+    display: inline-block;
+    width: 80px;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #03045e;
+    /* position: relative; */
+    overflow: hidden;
+    transition: all 0.5s ease-in;
+    z-index: 1;
+    cursor: pointer;
+    background-color: #000000;
+}
+
+
+.change-form::before,
+.change-form::after {
+ content: '';
+ position: absolute;
+ top: 0;
+ width: 0;
+ height: 100%;
+ transform: skew(15deg);
+ transition: all 0.2s;
+ overflow: hidden;
+ z-index: -1;
+}
+
+.change-form::before {
+ left: -10px;
+ background: #7ef2ff;
+}
+
+.change-form::after {
+ right: -10px;
+ background: #002845;
+}
+
+.change-form:hover::before,
+.change-form:hover::after {
+ width: 63%;
+}
+
+.change-form:hover span{
+    color: white;
+    transition: 0.2 ease;
 
 }
 
-.create-task:hover{
-    background-color: rgb(0, 123, 123);
+.change-form span {
+ color: white;
+ font-size: 12px;
+ font-weight: 600;
+ transition: all 0.2s ease-in;
 }
+
 
 
 /* Calendar */
+
+
+/* 
+.fc-direction-ltr .fc-timegrid-now-indicator-arrow {
+    border-color: #37ff00;
+}
+
+  
+
+.fc .fc-timegrid-now-indicator-line {
+    opacity: .7;
+    border-style: solid;
+    border-color: #37ff00;
+    border-width: 3px 0 0;
+} */
 
 .fc-daygrid-day-frame, .fc-scrollgrid-sync-inner, .fc-scroller ,.fc-scroller-liquid-absolute:hover{
     cursor: pointer !important ;
@@ -699,12 +825,14 @@ dialog img {
     height: 90%;
     width: 90%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     margin: 20px;
     background-color: #202231 ;
     border-radius: 2px;
+    position: relative;
 }
 
 
@@ -715,8 +843,18 @@ canvas {
     height: 100%;
     object-fit: contain; 
     padding: 20px;
+    
 }
 
+.chart-range-wrapper{
+    position:absolute;
+    right: 20px;
+    top:10px;
+}
+/* 
+.input-pieChart{
+    position: absolute;
+} */
 
 
 /* .chart-wrapper canvas{
