--- a/src/css/index.css
+++ b/src/css/index.css
@@ -819,7 +819,7 @@ label{
     height: 90%;
     width: 90%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -845,12 +845,37 @@ canvas {
     right: 20px;
     top:10px;
 }
-/* 
-.input-pieChart{
+
+/* ////////// input charts ////////////// */
+.date-inputs{
     position: absolute;
-} */
+    top: 10px;
+    left: 10px;
+    display: flex;
+    gap: 10px;
+}
+
+.date-inputs input[type="date"]{
+    padding: 2px 2px;
+    font-size: 12px;
+    border-radius: 4px;
+    border: 1px solid white;
+    background-color: #ffffff;
+
+}
 
 
-/* .chart-wrapper canvas{
-    height: 300px;
-} */
+.input-wrapper {
+    position: relative;
+    margin: 10px 0 0 0;
+}
+
+.date-inputs label{
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.8rem;
+    position:absolute;
+    top:-1.1rem;
+
+}
+
+
