--- a/src/css/index.css
+++ b/src/css/index.css
@@ -849,19 +849,22 @@ canvas {
 /* ////////// input charts ////////////// */
 .date-inputs{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 2%;
+    left: 1%;
     display: flex;
-    gap: 10px;
+    width: 26%;  
+    min-width: 200px;
+    justify-content: space-between;
 }
 
 .date-inputs input[type="date"]{
-    padding: 2px 2px;
-    font-size: 12px;
+    padding: 2%;
+    font-size: 0.8em;
     border-radius: 4px;
     border: 1px solid white;
     background-color: #ffffff;
-
+    width: 100%;
+    max-width: 100px;
 }
 
 
@@ -872,9 +875,9 @@ canvas {
 
 .date-inputs label{
     font-family: 'Roboto', sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.7em;
     position:absolute;
-    top:-1.1rem;
+    top:-1.4em;
 
 }
 
